🔧 OTIMIZAÇÃO MEMÓRIA - Worker timeout fix
✅ CORREÇÕES IMPLEMENTADAS:

1. RENDER.YAML:
   - Timeout reduzido para 120s (padrão Render)
   - Max requests reduzido para 50
   - Worker class sync + preload

2. SCRIPT PYTHON:
   - read_only=True no load_workbook
   - wb.close() explícito
   - Otimizações de memória

3. FRONTEND:
   - Timeout reduzido para 2 minutos
   - Melhor tratamento de timeout

🎯 OBJETIVO: Resolver WORKER TIMEOUT e SIGKILL

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: chmod +x render-build.sh && ./render-build.sh
-    startCommand: gunicorn --bind 0.0.0.0:$PORT --workers 1 --timeout 300 --max-requests 100 --max-requests-jitter 10 server:app
+    startCommand: gunicorn --bind 0.0.0.0:$PORT --workers 1 --timeout 120 --max-requests 50 --max-requests-jitter 5 --worker-class sync --preload server:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.18
@@ -17,8 +17,8 @@ services:
       - key: WORKERS
         value: 1
       - key: TIMEOUT
-        value: 300
+        value: 120
       - key: MAX_REQUESTS
-        value: 100
+        value: 50
       - key: MAX_REQUESTS_JITTER
-        value: 10 
+        value: 5 
