--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# Logs
+logs/
+*.log
+
+# Generated PDFs
+*.pdf
+generated_pdfs/
+
+# Temporary files
+*.tmp
+*.temp
+
+# Environment variables
+.env
+.env.local
+.env.production
+
 # Python
 __pycache__/
 *.py[cod]
@@ -19,31 +36,26 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
-# Virtual Environment
+# Virtual environment
 venv/
 env/
 ENV/
 
-# IDE
+# IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
 
-# Logs
-*.log
-logs/
-
-# Generated PDFs
-*.pdf
-generated_pdfs/
-
-# OS
+# OS files
 .DS_Store
 Thumbs.db
 
-# Temporary files
-*.tmp
-*.temp
+# Database
+*.db
+*.sqlite3
+
+# Backup files
+*.bak
+*.backup
