--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask==3.0.3
-Flask-CORS==4.0.1
-Flask-Limiter==3.8.0
-openpyxl==3.1.5
-reportlab==4.2.5
-Werkzeug==3.0.4
-gunicorn==23.0.0
-Pillow==10.4.0
-requests==2.31.0 
+Flask==2.3.3
+Flask-CORS==4.0.0
+Flask-Limiter==3.5.0
+openpyxl==3.1.2
+reportlab==4.0.4
+redis==5.0.1
+celery==5.3.4
+requests==2.31.0
+gunicorn==21.2.0 
